--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="depot">Depot :</string>
     <string name="class_id">Class :</string>
     <string name="no_data_error_message">No data returned from the server</string>
+    <string name="class_string">Class</string>
+    <string name="no_sightings_logged">You have not logged any sightings for this class</string>
+    <string name="sighting_count_message">You have logged sightings on %1$d out of %2$d trains</string>
 </resources>
