--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="no_sightings_logged">You have not logged any sightings for this class</string>
     <string name="sighting_count_message">You have logged sightings on %1$d out of %2$d trains</string>
     <string name="title_activity_maps">Map</string>
+    <string name="last_spotted">Last spotted :</string>
+    <string name="where">Where :</string>
 </resources>
