--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="gallery">Gallery</string>
     <string name="favourites">Favourites</string>
     <string name="history">History</string>
+    <string name="loading_message">Please wait, loading</string>
+    <string name="class_label">Class :</string>
+    <string name="loading">Loading</string>
+    <string name="about">About</string>
 </resources>
